# LiteFX-Sample

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
shaders/: basic_fs.hlsl
src/: main.cpp  main.h  sample.cpp  sample.h
